# kontexto

./: .gitignore  CLAUDE.md  GITHUB_CI_SETUP.md  IMPROVED_WORD_FILTER.md  PROGRESS_INDICATOR_FEATURE.md  README.md  frontend-ci.yml  test-setup.js
.github/: copilot-instructions.md
.github/workflows/: frontend-ci.yml
code/frontend/: .prettierignore  COOKIE_CONSENT.md  README.md  components.d.ts  env.d.ts  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vercel.json  (+3 more)
code/python/: .env.local  pyproject.toml
code/python/data/: solutions_de.txt  unfittingwords_de.txt
code/python/src/database/: database.py  database_config.py  word_repository.py
code/python/src/database/entities/: base.py  game.py  similarity.py  word.py
code/python/src/database/repositories/: game_repository.py  similarity_repository.py  word_repository.py
code/python/src/language/: language.py
code/python/src/model/: word.py
code/python/src/scripts/: empty_tables.py  fill_words_table.py  init_tables.py  migrate_similarity_schema.py  new_game.py  optimize_similarity_table.py  simulate_frontend_queries.py  validate_word_filter.py
code/python/src/services/: game_service.py  improved_word_filter.py  language.py  sentence_transformer_similarity_service.py  similarity_service.py  similarity_service_factory.py  transformer_similarity_service.py  word.py  word_service.py
code/python/src/services/interfaces/: i_similarity_service.py
features/: MULTI_GAME_PROGRESS_FEATURE.md  PROGRESS_INDICATOR_FEATURE.md
(+97 files in other folders)
